добавил link and header

--- a/lab1/index.html
+++ b/lab1/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Основы HTML</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header"></header>
+        <nav class="navigation">
+            <ul>
+                <li><a href="#structure">Базовая структура</a></li>
+                <li><a href="#balises">HTML-теги</a></li>
+                <li><a href="#css">Основы CSS</a></li>
+            </ul>
+        </nav>
+        <div class="mx-1 text-center">
+            <h1>Основы HTML</h1>
+            <a class="mail" href="mailto:contact@monsite.com">Связаться с нами</a>
+        </div>
+    </header>
 </body>
 </html>
