--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,5 +20,70 @@
             <a class="mail" href="mailto:contact@monsite.com">Связаться с нами</a>
         </div>
     </header>
+    <main class="mx-5">
+        <div class="block-image">
+            <img class="image" src="HTML.png" alt="HTML" width="100" height="100">
+        </div>
+        <p class="text-just">
+            HTML (язык разметки гипертекстов) — это язык разметки, используемый для создания веб-страниц. Он позволяет структурировать содержимое страницы, используя теги, которые определяют значение и представление содержимого. HTML-страницы можно создавать с помощью простого текстового редактора или более продвинутого HTML-редактора.
+        </p>
+        <section class="structure" id="structure">
+            <h2 style="text-align: center">Базовая структура</h2>
+            <p class="text-just">
+                Основная структура HTML-страницы включает в себя следующие элементы:
+            </p>
+            <ul>
+                <li>Тег <code>&lt;!DOCTYPE html&gt;</code>, который указывает используемую версию HTML</li>
+                <li>Тег <code>&lt;html&gt;</code>, который охватывает весь контент страницы</li>
+                <li>Теги <code>&lt;head&gt;</code> и <code>&lt;body&gt;</code>, которые определяют соответственно информацию о странице (заголовок, метаданные и т.д.) и видимый контент страницы</li>
+            </ul>
+        </section>
+        <section class="balises" id="balises">
+            <h2 style="text-align: center">HTML-теги</h2>
+            <p class="text-just">
+                HTML-теги используются для определения структуры и содержания веб-страницы. Они состоят из имени тега, заключенного в угловые скобки (<code>&lt;</code> и <code>&gt;</code>), и могут содержать атрибуты для определения дополнительных свойств. Вот несколько примеров распространенных HTML-тегов:
+            </p>
+            <ul>
+                <li><code>&lt;h1&gt;</code> до <code>&lt;h6&gt;</code> для заголовков</li>
+                <li><code>&lt;p&gt;</code> для параграфов</li>
+                <li><code>&lt;a&gt;</code> для ссылок</li>
+                <li><code>&lt;img&gt;</code> для изображений</li>
+                <li><code>&lt;ul&gt;</code> и <code>&lt;li&gt;</code> для списков</li>
+            </ul>
+        </section>
+        <section class="css" id="css">
+            <h2 style="text-align: center">Основы CSS</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Свойство CSS</th>
+                        <th>Описание</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>color</td>
+                        <td>Определяет цвет текста</td>
+                    </tr>
+                    <tr>
+                        <td>background-color</td>
+                        <td>Определяет цвет фона</td>
+                    </tr>
+                    <tr>
+                        <td>font-size</td>
+                        <td>Определяет размер шрифта</td>
+                    </tr>
+                    <tr>
+                        <td>font-family</td>
+                        <td>Определяет шрифт</td>
+                    </tr>
+                    <tr>
+                        <td>border</td>
+                        <td>Определяет границу вокруг элемента</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+    </main>
 </body>
 </html>
