добавил  Блок с особенностями

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -37,6 +37,58 @@
     </div>
   </section>
 </header>
+
+<!-- Блок с особенностями/преимуществами -->
+<section id="features" class="py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Изучение французского языка</h2>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Основы</h3>
+            <p class="card-text">Изучения алфавита, произношения и основных фраз. Это поможет вам освоить базовые навыки общения на французском языке.
+
+            </p>
+          </div>
+          <div class="card-body">
+            <h3 class="card-title">Грамматика</h3>
+            <p class="card-text">Основные грамматические правила французского языка, такими как согласование слов, времена глаголов, падежи и другие особенности.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Письмо</h3>
+            <p class="card-text">Практикуйся в написании текстов, писем или дневников на французском языке. Это поможет тебе развить навыки письма и закрепить грамматические конструкции.</p>
+          </div>
+          <div class="card-body">
+            <h3 class="card-title">Словарный запас</h3>
+            <p class="card-text">Пополняй свой словарный запас, учи новые слова и фразы. Постепенно расширяй свои знания, чтобы уметь выражать свои мысли на различные темы.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 mb-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Чтение</h3>
+            <p class="card-text">Читаем книги, статьи или блоги на французском языке. Это поможет вам улучшить ваши навыки чтения, а также пополнить словарный запас и понять различные стили и темы.
+
+            </p>
+            <div class="card-body">
+              <h3 class="card-title">Разговорная практика</h3>
+              <p class="card-text">Общаемся с носителями языка или другими студентами французского языка. Практикуемся в разговоре, слушаем и повторяем фразы.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
   
 
   
