--- a/lab2/index.html
+++ b/lab2/index.html
@@ -89,6 +89,40 @@
   </div>
 </section>
 
+<!-- Блок с формой обратной связи и контактами -->
+<section id="contact" class="bg-light py-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Обратная связь и контакты</h2>
+    <div class="row">
+      <div class="col-lg-6">
+        <form action="https://httpbin.org/post" method="post" enctype="text/plain">
+          <div class="mb-3">
+            <label for="name" class="form-label">Ваше имя</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Ваш Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="message" class="form-label">Сообщение</label>
+            <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+      </div>
+      <div class="col-lg-6">
+        <h3>Свяжитесь с нами</h3>
+        <p>Если у вас есть вопросы или предложения, не стесняйтесь связаться с нами:</p>
+        <ul class="list-unstyled">
+          <li>Email: info@graig.com</li>
+          <li>Телефон: +1234567890</li>
+          <li>Адрес: г. Город, ул. Улица, д. 1</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</section>
   
 
   
